added minit:boot() for addings path (lack of better solution). Started testing S3 API

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "s3erl"]
 	path = s3erl
 	url = git://github.com/Voker57/s3erl.git
+[submodule "ibrowse"]
+	path = ibrowse
+	url = git://github.com/cmullaparthi/ibrowse.git
