Added basic S3 encryption

--- a/application.cfg
+++ b/application.cfg
@@ -1,5 +1,8 @@
+{debug, true}.
+
 % http://spawnlink.com/articles/managing-application-configuration/
 {aws_key_id, "AMAZON S3 KEY ID"}.
 {aws_secret_key, "AMAZON S3 SECRET KEY"}.
 {aws_bucket, "mailbackupbottiger"}.
 
+{crypto_global_iv, "QMT7KUwzfaMyJQ4QSM1JxmTWXPR9RSdIuYr94"}.
