Add R14B03 as supported Erlang version

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {lib_dirs,["deps"]}.
 
-{require_otp_vsn, "R14B02"}.
+{require_otp_vsn, "R14B0[2-3]"}.
 
 {deps, [
         {s3erl, ".*", {git, "git://github.com/bottiger/s3erl.git", "master"}},
