Use rebar to pack releases

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,7 @@
 {lib_dirs,["deps"]}.
 
+{sub_dirs, ["rel"]}.
+
 {require_otp_vsn, "R14B0[2-3]"}.
 
 {deps, [
@@ -7,5 +9,5 @@
         {gproc, ".*", {git, "git://github.com/esl/gproc.git", "master"}},
         {proper, ".*", {git, "https://github.com/etrepum/proper.git", "master"}},
         {erlang_json_parser, ".*", {git, "git@github.com:bottiger/erlang-json-parser.git", "master"}},
-        {ibrowse, ".*", {git, "git://github.com/edwardw/ibrowse.git", "master"}} 
+        {ibrowse, ".*", {git, "git://github.com/edwardw/ibrowse.git", "master"}}
 ]}.
